force-app/main/default/objects/Quality_Assurance_Question__c/Quality_Assurance_Question__c.object-meta.xml
<CustomObject>
    <label>Quality Assurance Question</label>
    <nameField>
        <displayFormat>Question-{0000}</displayFormat>
        <label>Quality Assurance Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Assurance Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>