force-app/main/default/objects/Quality_Assurance_Question__c/fields/Multi_Choice_Option_List__c.field-meta.xml
<CustomField>
    <fullName>Multi_Choice_Option_List__c</fullName>
    <label>Multi-Choice Option List</label>
    <type>TextArea</type>
</CustomField>