force-app/main/default/objects/Quality_Assurance_Question__c/fields/Pass_Fail__c.field-meta.xml
<CustomField>
    <fullName>Pass_Fail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This question will become pass/fail. If the agent doesn&apos;t meet the criteria the entire Quality Assessment will fail.</inlineHelpText>
    <label>Pass/Fail</label>
    <type>Checkbox</type>
</CustomField>