force-app/main/default/objects/Quality_Assurance_Question__c/fields/Quality_Assurance_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Quality_Assurance_Questionnaire__c</fullName>
    <label>Quality Assurance Questionnaire</label>
    <referenceTo>ai_QualityAssuranceQuestionnaire__c</referenceTo>
    <relationshipLabel>Quality Assurance Questions</relationshipLabel>
    <relationshipName>Quality_Assurance_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>