force-app/main/default/objects/Quality_Assurance_Question__c/fields/Question_Details__c.field-meta.xml
<CustomField>
    <fullName>Question_Details__c</fullName>
    <inlineHelpText>Describe the &apos;why&apos; behind the question, what makes this question successful, or other details that may be important when reviewing the interaction.</inlineHelpText>
    <label>Question Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>