force-app/main/default/objects/Quality_Assurance_Question__c/fields/Question_Order__c.field-meta.xml
<CustomField>
    <fullName>Question_Order__c</fullName>
    <inlineHelpText>The order in the questionnaire the question will appear in.</inlineHelpText>
    <label>Question Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>