force-app/main/default/objects/Quality_Assurance_Question__c/fields/Question_Weight__c.field-meta.xml
<CustomField>
    <fullName>Question_Weight__c</fullName>
    <label>Question Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>