force-app/main/default/objects/Quality_Assurance_Question__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <inlineHelpText>This is the section of the quality assessment that this question will belong to.</inlineHelpText>
    <label>Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>